# mfhpo-simulator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  check_github_actions_locally.sh  codecov.yml  mypy.ini  pip-build.sh  pyproject.toml  requirements-for-developer.txt  requirements-for-setup.txt  requirements-for-smac.txt  requirements-for-test.txt  requirements.txt  setup-requirements.txt  setup.py
.github/workflows/: black.yml  pre-commit.yml  python-app.yml  ruff.yml
benchmark_apis/hpo/: abstract_bench.py  discrete_search_spaces.json  hpolib.py  jahs.py  lcbench.py
benchmark_apis/synthetic/: abstract_func.py  branin.py  hartmann.py  test_func.py
benchmark_simulator/: __init__.py  _constants.py  _secure_proc.py  _utils.py  simulator.py
benchmark_simulator/_simulator/: _base_wrapper.py  _utils.py  _worker.py  _worker_manager.py  _worker_manager_for_ask_and_tell.py  simulator.py
benchmark_simulator/_trackers/: _config_tracker.py  _state_tracker.py
benchmark_simulator/utils/: __init__.py  _performance_over_time.py
demo/: measure_time.py  plot_validation.py  validation-optuna-results-deterministic.json  validation-optuna-results-noisy.json  validation-results-deterministic.json  validation-results-noisy.json  validation_with_optuna.py  validation_with_random.py  validation_with_random_search.py
docs/: ask-and-tell.md  examples.md  usage.md  wrapper.md
examples/: bohb.py  dehb.py  minimal.py  neps.py  neps.sh  plot_performance_over_time.py  random_with_ask_and_tell.py  random_with_dummy.py  run_comparison.sh  smac.py  toy.py  utils.py
examples/ask_and_tell/: optuna.py  random.py
examples/minimal/: bohb.py  dehb.py  neps.py  neps.sh  optuna_mo_ctpe.py  smac.py
figs/: simulator-conceptual.ipynb
optimizers/: bohb.py  dehb.py  neps.py  neps.sh  utils.py
repo_name/: __init__.py
src/: README.md  __init__.py  _ask_tell_manager.py  _base_wrapper.py  _config_tracker.py  _constants.py  _state_tracker.py  _validators.py  async_opt_simulator.py  example.py  simulator.py
src/tests/: test_config_tracker.py  test_expensive_sampler_with_ask_and_tell.py  test_optimize_with_ask_and_tell.py  test_order_check_with_ask_and_tell.py  test_simulator_for_ask_and_tell.py  test_simulator_integration.py  test_state_tracker.py  utils.py
test/: test_example.py  test_optimize.py  test_optimize_with_ask_and_tell.py  test_order_check.py  test_order_check_with_ask_and_tell.py  test_secure_proc.py  test_simulator.py  test_simulator_for_ask_and_tell.py  test_timeout_error.py  test_utils.py
tests/: test_config_tracker.py  test_expensive_sampler.py  test_expensive_sampler_with_ask_and_tell.py  test_optimize.py  test_optimize_with_ask_and_tell.py  test_order_check.py  test_order_check_with_ask_and_tell.py  test_secure_proc.py  test_simulator.py  test_simulator_for_ask_and_tell.py  test_timeout_error.py  test_utils.py  test_utils_for_plot.py  utils.py
