[tool.poetry]
name = "mfhpo-simulator"
version = "0.1.0"
description = "The simulator for multi-fidelity or parallel optimization using tabular or surrogate benchmarks"
authors = ["Shuhei Watanabe <shuhei.watanabe.utokyo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "benchmark_simulator"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ujson = "^5.7.0"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
ujson = "^5.7.0"
numpy = "^1.24.3"
h5py = "^3.8.0"
pyqt5 = "^5.15.9"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
ipython = "^8.13.2"
jahs-bench = "1.1.0"
dehb = "0.0.5"
hpbandster = "0.7.4"


[tool.poetry.group.smac.dependencies]
ujson = "^5.7.0"
numpy = "^1.24.3"
h5py = "^3.8.0"
pyqt5 = "^5.15.9"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".ruff_cache",
  ".mypy_cache",
  ".venv",
  "venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
known-first-party = ["benchmark_simulator", "tests"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
docstring-code-format = true
