[project]
name = "mfhpo-simulator"
version = "0.1.0"
description = "The simulator for multi-fidelity or parallel optimization using tabular or surrogate benchmarks"
authors = [
    {name = "Shuhei Watanabe", email = "shuhei.watanabe.utokyo@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "ujson>=5.7.0",
    "numpy>=1.24.3,<2.0.0",
]

[project.optional-dependencies]
# Development tools and common dependencies
dev = [
    "h5py>=3.8.0",
    "pyqt5>=5.15.9",
    "pytest-cov>=4.0.0",
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "ipython>=8.13.2",
    "jahs-bench==1.1.0",
    "dehb==0.0.5",
    "hpbandster==0.7.4",
]
# SMAC development (note: smac package must be installed separately via requirements-for-smac.txt due to conflicts with jahs-bench)
smac = [
    "h5py>=3.8.0",
    "pyqt5>=5.15.9",
    "pytest-cov>=4.0.0",
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "ipython>=8.13.2",
]
# Test dependencies
test = [
    "dehb==0.0.5",
    "mfhpo-benchmark-api>=2.0.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark_simulator"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".claude",
  ".ruff_cache",
  ".mypy_cache",
  ".venv",
  "venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
known-first-party = ["benchmark_simulator", "tests"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
docstring-code-format = true
